fixed issue in user roles