@@ -9,6 +9,7 @@ import vacademy.io.common.auth.dto.UserWithRolesDTO;
 import vacademy.io.common.auth.enums.UserRoleStatus;
 import vacademy.io.common.auth.model.CustomUserDetails;
 
+import java.util.Arrays;
 import java.util.List;
 
 @RestController
@@ -19,9 +20,11 @@ public class RoleInternalController {
     private RoleService roleService;
 
     @PostMapping("/users-of-status")
-    public ResponseEntity<List<UserWithRolesDTO>> getUsersOfStatus(@RequestBody List<String>roles,
+    public ResponseEntity<List<UserWithRolesDTO>> getUsersOfRole(@RequestBody List<String>roles,
                                                                    @RequestParam String instituteId) {
-        UserRoleFilterDTO userRoleFilterDTO = new UserRoleFilterDTO(roles,List.of(UserRoleStatus.ACTIVE.name()));
+        UserRoleFilterDTO userRoleFilterDTO = new UserRoleFilterDTO();
+        userRoleFilterDTO.setRoles(roles);
+        userRoleFilterDTO.setStatus(Arrays.asList(UserRoleStatus.ACTIVE.name()));
         List<UserWithRolesDTO> response = roleService.getUsersByInstituteIdAndStatus(instituteId, userRoleFilterDTO);
         return ResponseEntity.ok(response);
     }
